Refactor tests for parser